file upload bug fix and edited gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-de ###
+### Node ###
 # Logs
 logs
 *.log
@@ -38,3 +38,5 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+# upload image directory
+uploads
